@@ -63,6 +63,8 @@ Version 1.0.7.22
   -  Optimization: Use file_get_contents() to load sourcecode from files.
      Even if GeSHi worked with PHP 4.1 before, it doesn't now. (Milian Wolff)
   -  Added description of extra language features (SF#1970248, BenBE)
+  -  Added support for highlighting the C# using and namespace directives (SF #1395677, BenBE)
+  -  Added support for highlighting the Java import and package directives (SF #1395677, BenBE)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
      * Bash
